model, database, ng api generator

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -12,6 +12,11 @@
 <ul>
   <li>
     <h2>
+      <a target="_blank" rel="noopener" href="#/todos">Todos Example</a>
+    </h2>
+  </li>
+  <li>
+    <h2>
       <a target="_blank" rel="noopener" href="/api/openapi.json"
         >Openapi Spec.</a
       >
