Implement ng client JWT

--- a/client/src/app/home/home.component.html
+++ b/client/src/app/home/home.component.html
@@ -12,7 +12,14 @@
 <ul>
   <li>
     <h2>
-      <a target="_blank" rel="noopener" href="#/todos">Todos Example</a>
+      <a target="_blank" rel="noopener" href="#/auth">Auth functions</a>
+    </h2>
+  </li>
+  <li>
+    <h2>
+      <a target="_blank" rel="noopener" href="#/todos"
+        >Todos Example (Auth required to add/remove)</a
+      >
     </h2>
   </li>
   <li>
